--- a/ProjectAl/ProjectAl.cbp
+++ b/ProjectAl/ProjectAl.cbp
@@ -30,7 +30,15 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add directory="../../../Allegro c++/allegro-5.0.10-mingw-4.7.0/include" />
 		</Compiler>
+		<Linker>
+			<Add library="../../../Allegro c++/allegro-5.0.10-mingw-4.7.0/lib/liballegro-5.0.10-monolith-mt-debug.a" />
+			<Add library="../../../Allegro c++/allegro-5.0.10-mingw-4.7.0/lib/liballegro-5.0.10-monolith-mt.a" />
+		</Linker>
+		<Unit filename="main.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
