--- a/ProjectAl/ProjectAl.cbp
+++ b/ProjectAl/ProjectAl.cbp
@@ -39,6 +39,9 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="main2.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
